--- a/src/resources/views/search.hbs
+++ b/src/resources/views/search.hbs
@@ -1,1 +1,17 @@
-
+<div class="mt-4">
+    <form method="post" action="">
+        <div class="form-group">
+            <label for="search-input">Keywords</label>
+            <input type="text" name="q" class="form-control" placeholder="Enter keywords...">
+        </div>
+        <div class="form-group">
+            <label for="gender-input">Gender</label>
+            <select name="gender" id="gender-input" class="form-control">
+                <option value="">-- Pick one --</option>
+                <option value="male">Male</option>
+                <option value="female">Female</option>
+            </select>
+        </div>
+        <button type="submit" class="btn btn-primary">Search</button>
+    </form>
+</div>
